Closed Bug 544361 Opened 14 years ago Closed 14 years ago

[OOPP] Silverlight 3 not recognized (worked yesterday)

Categories

(Core Graveyard :: Plug-ins, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.9.3a1

People

(Reporter: u88484, Assigned: benjamin)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

silverlight is not detected as being installed until 'dom.ipc.plugins.enabled' is toggled.

STR:
1) Load http://timheuer.com/silverlight/bouncingplane/, Banner tells you to install silverlight
2) Toggle 'dom.ipc.plugins.enabled' to flase
3) Refresh tab and silverlight content plays
4) Toggle 'dom.ipc.plugins.enabled' to true
5) Refresh page and silverlight content displays
6) Restart firefox and silverlight not detected as being installed once again
When I followed these steps, Silverlight content does play.

But killing the mozilla-runtime process does not kill the currently playing Silverlight content. (So I guess it's being run in-process?)
Your summary could be clearer.  How about adding "to false" to the end of it?

By the way, this is a regression in today's nightly, as it was originally fixed by bug 540604.
IU, yes toggling it to flase does allow silverlight content to play but the point of this bug is that toggling it back to true continues to allow silverlight content to play.
Summary: silverlight not detected as being installed until 'dom.ipc.plugins.enabled' is toggled → [OOPP] Silverlight 3 not recognized (worked yesterday)
Assignee: nobody → benjamin
Status: NEW → ASSIGNED
Attachment #425319 - Flags: review?(jones.chris.g)
Comment on attachment 425319 [details] [diff] [review]
CoInitialize in the plugin "main" thread, rev. 1

I trust that this is right.
Attachment #425319 - Flags: review?(jones.chris.g) → review+
Pushed http://hg.mozilla.org/mozilla-central/rev/31cf1c8d1672 along with missing |#ifdef XP_WIN|s.
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Verified Silverlight started playing now in step 6 of comment 0 with cset:
http://hg.mozilla.org/mozilla-central/rev/d3189d83fddc
Target Milestone: --- → mozilla1.9.3a1
also verified fix on Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a1pre) Gecko/20100205 Minefield/3.7a1pre (.NET CLR 3.5.30729)
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: